--- a/index.html
+++ b/index.html
@@ -11,20 +11,25 @@
     --good:#25c28a;--warn:#ffc24d;--bad:#ff4d4f;--accent:#46a3ff;
   }
   *{box-sizing:border-box}
+  html{scroll-behavior:smooth}
   body{margin:0;background:var(--bg);color:var(--text);
     font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
-  header{padding:16px 18px;border-bottom:1px solid var(--line);display:flex;align-items:center;justify-content:space-between;gap:12px}
-  h1{margin:0 0 6px 0;font-size:20px}
-  .sub{color:var(--muted);font-size:13px}
-  .actions{display:flex;gap:10px;align-items:center}
+
+  /* Header */
+  header{padding:16px 18px;border-bottom:1px solid var(--line)}
+  .head{
+    display:flex;align-items:center;gap:12px;flex-wrap:wrap
+  }
+  h1{margin:0;font-size:20px}
+  .sub{color:var(--muted);font-size:13px;width:100%}
   .btn{
     display:inline-flex;align-items:center;gap:8px;
     padding:8px 12px;border-radius:10px;border:1px solid #215a9e;
     background:linear-gradient(180deg,#4aa5ff,#2e7fd6); color:#fff;
     font-weight:700; text-decoration:none; box-shadow:0 1px 0 #0b0f16;
   }
-  .btn:active{transform:translateY(1px)}
 
+  /* Layout */
   .grid{
     display:grid;gap:20px;padding:16px;
     grid-template-columns:repeat(2,minmax(420px,1fr));
@@ -60,7 +65,7 @@
   .dt{font-size:12px;color:var(--muted)}
   .wx{display:flex;align-items:center;gap:8px}
 
-  /* Neutral (reverted) weather icons */
+  /* Neutral weather icons */
   .ico{width:26px;height:26px;display:inline-block;color:var(--muted);filter:drop-shadow(0 0 2px #0008)}
   .ico svg{fill:currentColor;stroke:currentColor}
 
@@ -80,16 +85,25 @@
 
   footer{padding:14px 16px;color:var(--muted);font-size:12px}
   .src a{color:var(--accent);text-decoration:none}
+
+  /* Floating "Top" button */
+  .fab{
+    position:fixed;right:16px;bottom:16px;display:flex;flex-direction:column;gap:10px;z-index:9999
+  }
+  .fab .top{
+    padding:10px 12px;border-radius:999px;border:1px solid #2a6c62;
+    background:linear-gradient(180deg,#26c29d,#129d7d);
+    color:#062d24;font-weight:800;text-decoration:none;box-shadow:0 2px 10px #0006
+  }
+  .fab .top:active{transform:translateY(1px)}
 </style>
 </head>
 <body>
 <header>
-  <div>
+  <div class="head">
     <h1>UK Trekking – Daily HikeScores</h1>
-    <div class="sub">Each tile shows its own HikeScore · Data: <a href="https://open-meteo.com/" target="_blank" rel="noreferrer">Open-Meteo</a></div>
-  </div>
-  <div class="actions">
     <a class="btn" href="regions_map.html" title="See scores placed on the UK map">Regions Map</a>
+    <div class="sub">Each tile shows its own HikeScore · Data: <a href="https://open-meteo.com/" target="_blank" rel="noreferrer">Open-Meteo</a></div>
   </div>
 </header>
 
@@ -99,8 +113,11 @@
   <span class="src">Adjust weights in <code>scoreSuitability()</code>. Scores floor at &lt;10.</span>
 </footer>
 
+<!-- Floating Top -->
+<div class="fab"><a class="top" href="#top" onclick="window.scrollTo({top:0,behavior:'smooth'})">↑ Top</a></div>
+
 <script>
-/* Regions (Upper Basildon removed) */
+/* Regions */
 const regions = [
   { name:"South Downs & Chilterns", lat:51.000, lon:-0.900 },
   { name:"Peak District (Edale)", lat:53.364, lon:-1.816 },
