--- a/regions_map.html
+++ b/regions_map.html
@@ -11,21 +11,32 @@
     --text:#e9edf3;--muted:#a9b3c3;
     --good:#25c28a;--warn:#ffc24d;--bad:#ff4d4f;--accent:#46a3ff;
   }
+  *{box-sizing:border-box}
+  html{scroll-behavior:smooth}
   html,body{height:100%}
   body{margin:0;background:var(--bg);color:var(--text);font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
-  header{padding:14px 16px;border-bottom:1px solid var(--line);display:flex;gap:12px;align-items:center;justify-content:space-between}
+
+  /* Header */
+  header{padding:14px 16px;border-bottom:1px solid var(--line)}
+  .head{display:flex;align-items:center;gap:12px;flex-wrap:wrap}
   h1{margin:0;font-size:18px}
-  a,a:visited{color:var(--accent);text-decoration:none}
-  #map{height:calc(100% - 64px);width:100%}
+  .meta{color:var(--muted);font-size:12px;width:100%}
+  .btn{
+    display:inline-flex;align-items:center;gap:8px;
+    padding:8px 12px;border-radius:10px;border:1px solid #215a9e;
+    background:linear-gradient(180deg,#4aa5ff,#2e7fd6); color:#fff;
+    font-weight:700; text-decoration:none; box-shadow:0 1px 0 #0b0f16;
+  }
+
+  #map{height:calc(100% - 68px);width:100%}
 
   .legend{
     position:absolute; bottom:16px; right:16px; background:var(--panel);
     border:1px solid var(--line); color:var(--text); padding:10px 12px;
-    border-radius:10px; font-size:12px; box-shadow:0 1px 0 #0b0f16;
+    border-radius:10px; font-size:12px; box-shadow:0 1px 0 #0b0f16; z-index:999
   }
   .dot{display:inline-block;width:10px;height:10px;border-radius:50%;margin-right:6px}
   .dot.good{background:var(--good)} .dot.warn{background:var(--warn)} .dot.bad{background:var(--bad)}
-  .meta{color:var(--muted);font-size:12px}
 
   /* Clean pill labels */
   .lbl{padding:5px 10px;border-radius:999px;font-size:12px;font-weight:700;color:#0b1a14;
@@ -36,15 +47,25 @@
   .lbl.warn .s{background:#b87e12;color:#111}
   .lbl.bad .s{background:#7e2224;color:#fff}
   .leaflet-tooltip.lbl-tip{background:transparent;border:none;box-shadow:none;font-family:inherit}
+
+  /* Floating Top button */
+  .fab{
+    position:fixed;right:16px;bottom:16px;z-index:1000
+  }
+  .fab .top{
+    padding:10px 12px;border-radius:999px;border:1px solid #2a6c62;
+    background:linear-gradient(180deg,#26c29d,#129d7d);
+    color:#062d24;font-weight:800;text-decoration:none;box-shadow:0 2px 10px #0006
+  }
 </style>
 </head>
 <body>
 <header>
-  <div>
+  <div class="head">
     <h1>UK Trekking – Map View</h1>
+    <a class="btn" href="./index.html">Dashboard</a>
     <div class="meta">Colour-coded by today’s suitability · Data: Open-Meteo</div>
   </div>
-  <nav><a href="./index.html">Dashboard</a></nav>
 </header>
 
 <div id="map"></div>
@@ -53,6 +74,9 @@
   <div><span class="dot warn"></span>Fair (40–54)</div>
   <div><span class="dot bad"></span>High risk (&lt;40)</div>
 </div>
+
+<!-- Floating Top -->
+<div class="fab"><a class="top" href="#top" onclick="window.scrollTo({top:0,behavior:'smooth'})">↑ Top</a></div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin></script>
 <script>
@@ -125,8 +149,8 @@ L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
     marker.bindTooltip(tip,{permanent:true,direction:'top',className:'lbl-tip',offset:[0,0]}).openTooltip();
 
     const details = item.error
-      ? '<div class="meta" style="color:#ff8080">Data unavailable.</div>'
-      : `<div class="meta">Max/Min: ${item.data.daily.temperature_2m_max[0].toFixed(0)}° /
+      ? '<div style="color:#ff8080">Data unavailable.</div>'
+      : `<div style="color:#ccc">Max/Min: ${item.data.daily.temperature_2m_max[0].toFixed(0)}° /
          ${item.data.daily.temperature_2m_min[0].toFixed(0)}° · Wind:
          ${Math.round(item.data.daily.wind_speed_10m_max[0])} km/h · Rain:
          ${item.data.daily.precipitation_sum[0].toFixed(1)} mm</div>`;
